
5.2b1 -> 5.3a1
    - jbj: yarn: convert rpmavx to usage mutex with refcounts.
    - jbj: rename avContext to rpmavx.
    - jbj: rpmio: functional dir stream positioning.
    - jbj: rpmpgp: elimate msg argument, use __FUNCTION__ everywhere instead.
    - jbj: rpmio: eliminate sha224 and ripemd*, use beecrypt-4.2.0 instead.
    - jbj: rpmio: refactor dir stream handling from HTTP/DAV transport.
    - jbj: rpmio: add DIR stream positioning wrappers.
    - jbj: rpmio: add rpmdir.[ch] to refactor DIR handling routines.
    - jbj: rpmbf: add union/intersect of filters.
    - jbj: rpmfc: reduce the amount of debugging noise with lots of files.
    - jbj: rpmbf: use lookup3.c hash pairs with k linear combinations.
    - jbj: rpmbf: stub-in a Bloom filter.
    - jbj: selinux: fix: disabler bit toggle sense was inverted.
    - jbj: js: add getters/setters to handle defvar() variables.
    - jbj: js: add methods and unit tests for the Aug class.
    - jbj: augtool: finish proof-of-concept embedding. stdout capture todo++.
    - devzero2000: macros.in: add _datarootdir e _lispdir for GNU standard
    - jbj: augtool: capture stdout in aut->iob, return through rpmaugRun().
    - jbj: debugedit: handle DWARF-3 changes (#505774).
    - jbj: augtool: use rpmaug globals where useful.
    - jbj: rpmaug: add rpmaugPoptTable and global parameters.
    - jbj: rpmaug: add global augtool interpreter.
    - jbj: argv: add a separator character argument to argvJoin.
    - jbj: augeas: add "no brainer" rpmaug wrappings onto augeas methods.
    - jbj: rpmbuild: fix: ensure dependency EVR strings have only 0 or 1 dashes.
    - jbj: augeas: add aug_init() and aug_close() calls to the rpmaug wrapper.
    - jbj: js: stub-in a Aug class.
    - jbj: augeas: stub-in rpmaug object with ctors/dtors.
    - jbj: augeas: add AutoFu to find augeas libraries.
    - jbj: js: stub-in requires/loadModule global methods.
    - jbj: js: save the rpmjs interpreter pointer in rt private data.